Star icon for starred entries; fixed pill spacing.

--- a/packages/client/src/public/component-css/entry.css
+++ b/packages/client/src/public/component-css/entry.css
@@ -13,10 +13,23 @@
             padding: 0.5em;
             margin: 0.5em;
         }
-        .name {
-            font-size: 1.15rem;
-            font-weight: 400;
-            margin: none;
+
+        .name-and-star {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+
+            .name {
+                font-size: 1.15rem;
+                font-weight: 400;
+                margin: none;
+            }
+            .svg-inline--fa {
+                margin-left: auto;
+                color: yellow;
+            }
         }
 
         .entry-info {
@@ -38,6 +51,7 @@
                 display: inline-block;
                 padding: 0.2em 0.5em;
                 border-radius: 1em;
+                margin-left: auto;
             }
             .pill.playing {
                 background-color: royalblue;
